--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 		</ul>
 	</div>
 	<div class="stats-container col-s-12 col-m-12 col-12">
-		
+		<div class="calendar-container">
+			<h1 class="calendar-header">January 2016</h1>
+			<svg id="calendar" class="stats-calendar">
+			</svg>
+		</div>
 	</div>
 	<script type="text/javascript" src="javascript/tasks.js"></script>
 	<script type="text/javascript" src="javascript/storage.js"></script>
