Complete first version of Calendar View.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</div>
 	<div class="stats-container col-s-12 col-m-12 col-12">
 		<div class="calendar-container">
-			<h1 class="calendar-header">January 2016</h1>
+			<h1 id="calendar-header" class="calendar-header">January 2016</h1>
 			<svg id="calendar" class="stats-calendar">
 			</svg>
 		</div>
