--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/tasks.css">
 	<link rel="stylesheet" type="text/css" href="css/stats.css">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 </head>
 <body>
@@ -18,8 +19,11 @@
 	<div class="stats-container col-s-12 col-m-12 col-12">
 		<div class="calendar-container">
 			<h1 id="calendar-header" class="calendar-header">January 2016</h1>
-			<svg id="calendar" class="stats-calendar">
+			<svg id="calendar" class="calendar">
 			</svg>
+		</div>
+		<div class="bubble-container">
+			<canvas id="bubble-chart" class="bubble-chart"></canvas>
 		</div>
 	</div>
 	<script type="text/javascript" src="javascript/tasks.js"></script>
