Complete Bubble Chart.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<link rel="stylesheet" type="text/css" href="css/tasks.css">
 	<link rel="stylesheet" type="text/css" href="css/stats.css">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 </head>
 <body>
@@ -23,7 +22,8 @@
 			</svg>
 		</div>
 		<div class="bubble-container">
-			<canvas id="bubble-chart" class="bubble-chart"></canvas>
+			<svg id="bubble-chart" class="bubble-chart">
+			</svg>
 		</div>
 	</div>
 	<script type="text/javascript" src="javascript/tasks.js"></script>
