Complete initial timer state.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 		<div class="timer-container col-s-6 col-m-6 col-m-6">
 			<div class="timer">
 				<div class="timer-time-container">
-					<p class="timer-time">30:00</p>
+					<p id="timer-time" class="timer-time">120:00</p>
 				</div>
 				<div class="timer-slider-container">
-					<div class="timer-slider"></div>
-					<div class="timer-slider-control"></div>
+					<div id="timer-slider" class="timer-slider"></div>
+					<div id="timer-slider-control" class="timer-slider-control"></div>
 				</div>
 				<div class="timer-controls">
 					<div class="timer-controls-wrapper">
@@ -51,5 +51,6 @@
 	<script type="text/javascript" src="javascript/storage.js"></script>
 	<script type="text/javascript" src="javascript/main.js"></script>
 	<script type="text/javascript" src="javascript/timebox.js"></script>
+	<script type="text/javascript" src="javascript/timer.js"></script>
 </body>
 </html>
