Complete timer interaction.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 </head>
-<body>
+<body id="body">
 	<div class="main-wrapper">
 		<div class="tasks-container col-s-6 col-m-6 col-6">
 			<p class="tasks-header">What are your goals for today?</p>
@@ -18,7 +18,7 @@
 			</ul>
 		</div>
 		<div class="timer-container col-s-6 col-m-6 col-m-6">
-			<div class="timer">
+			<div id="timer" class="timer">
 				<div class="timer-time-container">
 					<p id="timer-time" class="timer-time">120:00</p>
 				</div>
