--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body id="body">
 	<div class="main-wrapper">
 		<div class="tasks-container col-s-6 col-m-6 col-6">
-			<p class="tasks-header">What are your goals for today?</p>
+			<p class="tasks-header">What are you getting done today?</p>
 			<input id="task-field" class="task-field col-s-10 col-m-10 col-10" type="text" maxlength="255"></input>
 			<ul id="task-list" class="task-list col-s-10">
 			</ul>
