Add header, logo.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 </head>
 <body id="body">
+	<div class="header">
+		<img class="logo" src="assets/logo.png"><h1 class="header-title">Timeboxing</h1>
+	</div>
 	<div class="main-wrapper">
 		<div class="tasks-container col-s-6 col-m-6 col-6">
 			<p class="tasks-header">What are you getting done today?</p>
