Make certain text unselectable, make tasks window smaller.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</div>
 	<div class="main-wrapper">
 		<div class="tasks-container col-s-6 col-m-6 col-6">
-			<p class="tasks-header">What are you getting done today?</p>
+			<p class="tasks-header unselectable">What are you getting done today?</p>
 			<input id="task-field" class="task-field col-s-10 col-m-10 col-10" type="text" maxlength="255"></input>
 			<ul id="task-list" class="task-list col-s-10">
 			</ul>
@@ -24,7 +24,7 @@
 		<div class="timer-container col-s-6 col-m-6 col-m-6">
 			<div id="timer" class="timer">
 				<div class="timer-time-container">
-					<p id="timer-time" class="timer-time">120:00</p>
+					<p id="timer-time" class="timer-time unselectable">120:00</p>
 				</div>
 				<div class="timer-slider-container">
 					<div id="timer-slider" class="timer-slider"></div>
