Add slider progress bar, fix display bug in Bubble Chart, add alarm sound on timer completion.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 					<p id="timer-time" class="timer-time unselectable">120:00</p>
 				</div>
 				<div class="timer-slider-container">
+					<div class="timer-slider-backdrop"></div>
 					<div id="timer-slider" class="timer-slider"></div>
 					<div id="timer-slider-control" class="timer-slider-control"></div>
 				</div>
