Add functionality to visit other month data on calendar.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
 	</div>
 	<div class="stats-container col-s-12 col-m-12 col-12">
 		<div class="calendar-container">
-			<h1 id="calendar-header" class="calendar-header"></h1>
+			<div class="calendar-header-container">
+				<button id="left-button" class="calendar-control-button" style="background: url('assets/left-button.svg') no-repeat;"></button>
+				<h1 id="calendar-header" class="calendar-header"></h1>
+				<button id="right-button" class="calendar-control-button" style="background: url('assets/right-button.svg') no-repeat;"></button>
+			</div>
+			<br>
 			<svg id="calendar" class="calendar">
 			</svg>
 		</div>
