--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 </head>
 <body id="body">
 	<div class="header">
-		<img class="logo" src="assets/logo.png">
-		<h1 class="header-title">Timeboxing</h1>
+		<a href="https://github.com/KavinSub/timeboxing" target="_blank">
+			<img class="logo" src="assets/logo.png">
+			<h1 class="header-title">Timeboxing</h1>
+		</a>
 	</div>
 	<div class="main-wrapper">
 		<div class="tasks-container col-s-6 col-m-6 col-6">
