Add description to charts.

--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
 				<h1 id="calendar-header" class="calendar-header"></h1>
 				<button id="right-button" class="calendar-control-button" style="background: url('assets/right-button.svg') no-repeat;"></button>
 			</div>
-			<br>
+			<h2 class="stats-header-description">Monthly Summary</h2>
+			<h2 class="stats-header-description">Each dot represents 30 minutes of work</h2>
 			<svg id="calendar" class="calendar">
 			</svg>
 		</div>
 		<div class="bubble-container">
+			<h1 class="bubble-header">Work Frequency</h1>
 			<svg id="bubble-chart" class="bubble-chart">
 			</svg>
 		</div>
